Minor styling fix: - Added max-width to card's heading as it overflows in certain instances

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,6 +103,9 @@ h4 {
 .right-text {
   text-align: right;
 }
+.card-container h2 {
+  max-width: 100%;
+}
 
 /* Spinner Component */
 .spinner-container {
